# harsh

./: .gitignore  Cargo.toml  README.md  config.ron  start-client.sh  start-server.sh  watch-client.sh  watch-server.sh
harsh-client/: Cargo.toml
harsh-client/src/: commands.rs  main.rs
harsh-common/: Cargo.toml
harsh-common/src/: client.rs  lib.rs  server.rs
harsh-server/: Cargo.toml
harsh-server/src/: gateway.rs  main.rs  security.rs  sessions.rs  storage.rs  utils.rs
harsh-server/src/storage/: models.rs  tests.rs
src/: main.rs
src/lib/: config.rs  database.rs  event.rs  harsh.rs  http.rs  log.rs  mod.rs
src/lib/db/: mod.rs  models.rs
src/lib/http/: mod.rs  models.rs  routes.rs
