[package]
name = "harsh"
version = "0.1.0"
edition = "2018"
description = "Harmony server application"

[dependencies]

# async engine
tokio = { version = "1.0", features = ["full"] }

# http client
axum = "0.3.2"

# database
sled = "0.34.7"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

# useful for logging
chrono = "0.4"
colored = "2.0.0"
