[package]
name = "harsh-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
telecomande = "1.2.2"
tokio = { version = "1.20.1", features = ["full"] }
harsh_common = { path = "../harsh-common" }